# dicom-privacy-auditor

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  NOTICE  PROJECT_STATE.md  README.md  RELEASE_NOTES.md  SECURITY.md  STATUS.md  STUDY_PROTOCOL.md  app.py  compose.orthanc.yml  compose.yml  pyproject.toml  requirements-reproducible.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  rule_request.yml
.github/workflows/: build-native-release.yml  dependency-review.yml  security.yml  tests.yml
configs/: dicomweb.example.json  external-pipeline.example.json  external-validation.example.json  midi-live-campaign.example.json  official-midi-validator-command.example.json  orthanc.example.json  rsna-anonymizer.example.json  rsna-ctp.example.json
docs/: ADAPTERS.md  BENCHMARK.md  CORPUS_INTEGRITY.md  DATA_DICTIONARY.md  DEMO.md  DEMO_MEDIA.md  DEPENDENCY_LOCKING.md  DICOMWEB.md  EXECUTABLES.md  EXTERNAL_DATA_EVALUATION.md  EXTERNAL_PIPELINES.md  EXTERNAL_VALIDATION_EXECUTION.md  HUMAN_REVIEW.md  IOD_AWARE.md  LEGAL_NOTICES.md  LOCAL_RELEASE_GATE.md  MANUSCRIPT_PLAN.md  MIDI_B.md  MIDI_LIVE_CAMPAIGN.md  PS315_ENGINE.md  PUBLICATION_REPORTS.md  REAL_DATA_SETUP.md  RELEASE_PROCESS.md  REPRODUCIBILITY.md  SCHEMA_MIGRATIONS.md  SECURITY_HARDENING.md  STUDY_WORKFLOWS.md  THREAT_MODEL.md  VALIDATION.md
examples/results/: paired_comparisons.json  summary.json
packaging/: EXECUTABLE_README.txt  entry_cli.py  entry_desktop.py
requirements/: lock-input.txt
requirements/locks/: cp313-linux-x86_64-runtime.txt
sample_data/: 0000000000000001.dcm  DOE_JANE_head_ct.dcm
schemas/: campaign-result.schema.json  campaign-tool-result.schema.json  demo-manifest.schema.json  dicomweb-config.schema.json  external-validation-config.schema.json  iod-registry.schema.json  midi-campaign.schema.json  paired-comparisons.schema.json  review-disagreements.schema.json  run-manifest.schema.json
scripts/: assemble_release_bundle.py  build_executables.py  build_release_distributions.py  check_action_pins.py  check_dependency_locks.py  check_distribution_contents.py  check_documentation.py  check_package_metadata.py  check_schema_integrity.py  check_workflow_integrity.py  compile_lock.py  generate_demo_media.py  generate_runtime_sbom.py  generate_synthetic_dicoms.py  normalize_sdist.py  package_native_release.py  package_source_release.py  run_demo_benchmark.py  run_local_release_gate.py  smoke_clean_wheel.py  smoke_orthanc.py  summarize_evaluations.py  update_ps315_tables.py  verify_reproducible_build.py
src/dicom_privacy_auditor/: __init__.py  adapter_cli.py  audit.py  benchmark_cli.py  cli.py  compare.py  compare_cli.py  deidentify.py  deidentify_cli.py  demo.py  desktop.py  detectors.py  export.py  external_validation.py  http_utils.py  jsonio.py  launcher.py  midi_cli.py  models.py  permissions.py  pixel.py  profiles.py  review_app.py  review_cli.py  validation.py
tests/: conftest.py  test_adapters.py  test_adversarial_v071.py  test_audit.py  test_benchmark.py  test_campaign.py  test_campaign_evidence.py  test_cli_and_reporting.py  test_cli_coverage_v061.py  test_compare.py  test_corpus.py  test_deidentify.py  test_dependency_locks.py  test_dicomweb.py  test_distribution_legal.py  test_distribution_policy.py  test_export.py  test_external_validation.py  test_hardening_v061.py  test_http_safety.py  test_iod.py  test_launcher.py  test_local_release_gate.py  test_midi.py  test_native_packaging.py  test_new_clis.py  test_pixel.py  test_privacy_evidence.py  test_ps315.py  test_release_checks_v071.py  test_release_packaging.py  test_review.py  test_schema_integrity.py  test_study.py  test_validation.py  test_workflow_integrity.py
validation/: local-release-gate.json
validation/codex/: BLOCKERS.md  DEVIATIONS.md  PROTOCOL_DEVIATIONS.md  RESOURCE_PROVENANCE.json  RESOURCE_STATUS.md  WORKLOG.md  dependency-versions.txt  environment.json  external-preflight-private.json  (+7 more)
(+98 files in other folders)
